add junit tests